# AgenticAI-Learning

./: .gitignore  requirements.txt
Fine_Tuning/: LoRA_Fine_Tuning.ipynb  pyproject.toml
Fine_Tuning/Dataset/: train.jsonl  train2.jsonl
Fine_Tuning/LoRA_Fine_Tuning/: LoRA_Fine_Tuning_Test.ipynb
Fine_Tuning/finetuned_improved/: README.md
Fine_Tuning/finetuned_improved/checkpoint-26/: rng_state.pth  scheduler.pt  trainer_state.json
Fine_Tuning/finetuned_improved/checkpoint-39/: rng_state.pth  trainer_state.json
LangGraph/: 01_LangGraph.ipynb  02_LancgGraph_Chain.ipynb  03_LangGraph_Agents.ipynb  AgenticRAG.ipynb  LangGraph-Learnings.txt  README.md
Langchain_Basics/: 1_DataIngestion.ipynb  2_DataSplitting.ipynb  3_DataEmbeddings.ipynb
RAG Techniques/: HyDE.ipynb  HyDE_Hypothetical_Document_Embedding.ipynb  pyproject.toml
RAG Techniques/CSV RAG/: CSV_Rag.ipynb
RAG Techniques/Corrective RAG/: corrective_rag.ipynb
RAG Techniques/Explainable Retriever/: Explainable_Retriever.ipynb
RAG Techniques/HyDE_Hypothetical_Document_Embedding/: HyDE_Hypothetical_Document_Embedding.ipynb
RAG Techniques/data/: username-or-email.csv
