[project]
name = "fine-tuning"
version = "0.1.0"
requires-python = ">=3.10,<3.13"

dependencies = [
    "datasets>=2.18.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.20.0",
    "accelerate>=0.25.0",
    "peft>=0.10.0,<0.19.0",
    "transformers>=4.36.2,<5.0.0",
    "trl>=0.8.0,<0.28.0",
    "torch>=2.0.0",
    "ipykernel>=7.1.0",
    "pyzmq>=27.1.0",
    "jupyter-client>=8.8.0",
]
